# ssi-scoreboard

./: .env.local.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  eslint.config.mjs  middleware.ts  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  proxy.ts  skills-lock.json  smithery.yaml  tsconfig.json  vitest.config.ts  wrangler.toml
app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
components/: ai-consent-dialog.tsx  anchor-stage-card.tsx  app-logo.tsx  archetype-performance.tsx  benchmark-picker.tsx  bottom-nav.tsx  cache-info-badge.tsx  cell-help-modal.tsx  coaching-tip.tsx  comparison-chart.tsx  comparison-table.tsx  competitor-marker.tsx  (+44 more)
lab/: .env.local.example  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
lab/data/: tune_results.json
lab/docs/: algorithms.md  identity-curation.md  model-set.md  tuning-report-2026-03-08.md
lab/src/: cli.py
lab/src/algorithms/: base.py  elo.py  ics.py  openskill_bt.py  openskill_bt_lvl.py  openskill_bt_lvl_decay.py  openskill_pl.py  openskill_pl_decay.py
lab/src/benchmark/: metrics.py  report.py  runner.py
lab/src/data/: divisions.py  exporter.py  identity.py  ipscresults.py  ipscresults_models.py  match_dedup.py  models.py  raw_store.py  store.py  sync.py
lab/src/engine/: main.py  page.py  scheduler.py
lab/src/tuning/: sweep.py
lab/tests/: test_algorithms.py  test_identity.py  test_ipscresults.py  test_match_dedup.py  test_metrics.py  test_models.py  test_raw_store.py  test_store.py
(+350 files in other folders)
